--- a/requirements.txt
+++ b/requirements.txt
@@ -24,20 +24,20 @@ msgpack==1.1.1
 networkx==3.5
 numba==0.61.2
 numpy==2.2.6
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
+#nvidia-cublas-cu12==12.6.4.1
+#nvidia-cuda-cupti-cu12==12.6.80
+#nvidia-cuda-nvrtc-cu12==12.6.77
+#nvidia-cuda-runtime-cu12==12.6.77
+#nvidia-cudnn-cu12==9.5.1.17
+#nvidia-cufft-cu12==11.3.0.4
+#nvidia-cufile-cu12==1.11.1.6
+#nvidia-curand-cu12==10.3.7.77
+#nvidia-cusolver-cu12==11.7.1.2
+#nvidia-cusparse-cu12==12.5.4.2
+#nvidia-cusparselt-cu12==0.6.3
+#nvidia-nccl-cu12==2.26.2
+#nvidia-nvjitlink-cu12==12.6.85
+#nvidia-nvtx-cu12==12.6.77
 packaging==25.0
 platformdirs==4.3.8
 pooch==1.8.2
@@ -62,7 +62,7 @@ torch==2.7.1
 torchaudio==2.7.1
 tqdm==4.67.1
 transformers==4.53.0
-triton==3.3.1
+#triton==3.3.1
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.5.0
